AM_CXXFLAGS = -I$(top_srcdir)

CLEANFILES = *~
MAINTAINERCLEANFILES = Makefile.in Makefile.am
DEFS = \
	$(CELLDEF) \
	$(SSEDEF) \
	$(DEBUGDEF) \
	$(PROFILERDEF)

lib_LTLIBRARIES = libhoneibackendssse.la

libhoneibackendssse_la_SOURCES =

libhoneibackendssse_includedir = $(includedir)/honei/backends/sse/
libhoneibackendssse_include_HEADERS =  operations.hh
